Several changed in the code and swagger.yaml
